--- a/src/includes/components/FieldEditable.pug
+++ b/src/includes/components/FieldEditable.pug
@@ -2,54 +2,27 @@ mixin FieldEditable({ order, title, attribute, id, header, accordionId = '', acc
   .FieldEditable.Accordion.border-0(class=`${header ? 'header' : ''} ${className}`)
     - const randomParentId = `${parentId}_${Math.floor(Math.random() * 100000)}`
     .Accordion-parent(id=`${randomParentId}`)
-      .FieldEditable-header.d-flex
-        .FieldEditable-header-item.order.text-nowrap= order
-        .FieldEditable-header-item.name.text-nowrap= title
-        .FieldEditable-header-item.type.text-nowrap 
-          = attribute
-          if (!header)
-            +Button({ title: defaultField ? 'Mặc định' : 'Tùy chỉnh', variant: defaultField ? 'btn-primary' : 'btn-success', badge: true })
-
-        .FieldEditable-header-item.id.text-nowrap
-          span.mr-2= id
-
-          //- if (!header)
-          .FieldEditable-header-item-actions.d-flex.align-items-center.ml-auto(class=`${header ? 'disabled' : ''}`)
-            +Button({ className: 'sortablejs-custom-handle', icon: 'tio-move-page', variant: 'btn-white' })
-            +Button({ className: 'js-arrange-up', icon: 'tio-arrow-upward', variant: 'btn-white' })
-            +Button({ className: 'js-arrange-down', icon: 'tio-arrow-downward', variant: 'btn-white' })
-            +Button({ icon: 'tio-copy', variant: 'btn-white' })
-            +Button({ className: 'js-arrange-remove', icon: 'tio-clear', variant: 'btn-white' })
-
-          .FieldEditable-header-item-collapse.d-flex.align-items-center.ml-2(class=`${header ? 'disabled' : ''}`)
-            //- +Button({ icon: 'tio-remove', variant: 'btn-ghost-white' })
-            div(role="button" data-toggle="collapse" data-target=`#${accordionId}` aria-expanded="true" aria-controls=`${accordionId}`)
-              +Button({ icon: 'tio-edit', variant: 'btn-ghost-white' })
-
-
       if (!header)
         .accordion-collapse(id=accordionId || false data-parent=`#${randomParentId}` class=`${accordionId ? 'collapse' : ''}`)
           .accordion-body
-            .FieldEditable-body
+            .FieldEditable-body(class=`${defaultField ? 'default-field' : ''}`)
               if (defaultField)
                 .row
                   .col-md-6.col-12.mb-3
                     +Input({ label: 'Tiêu đề field', placeholder: '(Tự nhận theo thuộc tính đã chọn ở loại field hoặc gõ lại)' })
                   .col-md-6.col-12.mb-3
-                    .d-flex.align-items-end
-                      +Select({
-                        className: 'w-100',
-                        label: 'Tên thuộc tính',
-                        placeholder: 'Gõ tên thuộc tính để chọn (ví dụ: tên tác giả)',
-                        options: [
-                          { label: 'Tên thuộc tính 1', value: '1' },
-                          { label: 'Tên thuộc tính 2', value: '2' },
-                          { label: 'Tên thuộc tính 3', value: '3' },
-                        ],
-                        iconSuffix: 'tio-chevron-down',
-                        withArrow: true,
-                      })
-                      +Button({ className: 'ml-3', variant: 'btn-primary', title: 'Thêm' })
+                    label.form-label Field #[span.hightlight mặc định] muốn thêm
+                    +Select({
+                      className: 'w-100',
+                      placeholder: 'Gõ tên thuộc tính để chọn (ví dụ: tên tác giả)',
+                      options: [
+                        { label: 'Tên thuộc tính 1', value: '1' },
+                        { label: 'Tên thuộc tính 2', value: '2' },
+                        { label: 'Tên thuộc tính 3', value: '3' },
+                      ],
+                      iconSuffix: 'tio-chevron-down',
+                      withArrow: true,
+                    })
 
               else
                 .row 
@@ -88,3 +61,27 @@ mixin FieldEditable({ order, title, attribute, id, header, accordionId = '', acc
                       title: 'Có',
                       labelId: 'Checkbox1',
                     })
+
+      .FieldEditable-header.d-flex
+        .FieldEditable-header-item.order.text-nowrap= order
+        .FieldEditable-header-item.name.text-nowrap= title
+        .FieldEditable-header-item.type.text-nowrap 
+          = attribute
+          if (!header)
+            +Button({ title: defaultField ? 'Mặc định' : 'Tùy chỉnh', variant: defaultField ? 'btn-primary' : 'btn-success', badge: true })
+
+        .FieldEditable-header-item.id.text-nowrap
+          span.mr-2= id
+
+          //- if (!header)
+          .FieldEditable-header-item-actions.d-flex.align-items-center.ml-auto(class=`${header ? 'disabled' : ''}`)
+            +Button({ className: 'sortablejs-custom-handle', icon: 'tio-move-page', variant: 'btn-white' })
+            +Button({ className: 'js-arrange-up', icon: 'tio-arrow-upward', variant: 'btn-white' })
+            +Button({ className: 'js-arrange-down', icon: 'tio-arrow-downward', variant: 'btn-white' })
+            +Button({ icon: 'tio-copy', variant: 'btn-white' })
+            +Button({ className: 'js-arrange-remove', icon: 'tio-clear', variant: 'btn-white' })
+
+          .FieldEditable-header-item-collapse.d-flex.align-items-center.ml-2(class=`${header ? 'disabled' : ''}`)
+            //- +Button({ icon: 'tio-remove', variant: 'btn-ghost-white' })
+            div(role="button" data-toggle="collapse" data-target=`#${accordionId}` aria-expanded="true" aria-controls=`${accordionId}`)
+              +Button({ icon: 'tio-edit', variant: 'btn-ghost-white' })
